corrected contrast errors

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -46,14 +46,11 @@ nav {
 
 nav a{
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     font-weight: bold;
     font-size: 25px;
 }
 
-nav a {
-    color: white;
-}
 
 /* Hero section */
 .hero {
@@ -177,7 +174,7 @@ nav a {
 
 .planner h3, .steps h3, .reasons h3 {
     margin-bottom: 15px;
-    color: white;
+    color: #003049;
     font-size: 2.5rem;
     text-align: center;
 }
@@ -205,7 +202,7 @@ nav a {
     display: flex;
     flex: 1;
     justify-content: space-around;
-    color: white;
+    color: #003049;
 }
 
 .reasons li {
@@ -469,7 +466,7 @@ figure img {
 .past-trips p {
     margin: 0.5rem;
     font-weight: bold;
-    color: white;
+    color: #003049;
 
 }
 
@@ -521,5 +518,8 @@ footer nav {
 }
 
 footer p{
+    font-size: 20px;
+    font-weight: bolder;
     margin: 0;
+    color: #ffffff;
 }
